<resources>
    <string name="app_name">Sifflet</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="email">Email</string>
    <string name="joueur">Joueur</string>
    <string name="Proprietaire_de_stade">Proprietaire de stade</string>
    <string name="motdepasse">Mot de passe</string>
    <string name="confirmer_le_mot_de_passe">"Confirmer votre mot de passe "</string>
    <string name="confirmPassword">Confirmer votre mot de passe</string>
    <string name="cree_un_compte">Cree un compte</string>
    <string name="se_connecter">Se Connecter</string>
    <string name="description_image">image de inscription</string>
    <string name="mot_de_passe_oublier">Mot de passe oublier</string>
    <string name="nom_du_stade">Nom du stade</string>
    <string name="num_du_stade">Numero</string>
    <string name="description_du_stade">description du stade</string>
    <string name="Liste_de_ligue">Liste des ligue</string>
    <string name="mustNotBeEmpty">Must not be empty !</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remember_me">Remember me</string>
    <string name="deconnection">Deconnection</string>
    <string name="profile">Profile</string>
    <string name="nom_profile">Nom:</string>
    <string name="prenom_profile">Prenom:</string>
    <string name="email_Profile">Email:</string>
    <string name="choisir_un_image">choisir votre image</string>
    <string name="Cree_un_compte">Crée un compte</string>
    <string name="simple_utilisateur">Simple utilisateur</string>
    <string name="Nom_de_la_ligue">Nom de la ligue</string>
    <string name="ligue_name">Nom de la ligue:</string>
    <string name="ligueName">ligue</string>
    <string name="description">Description</string>
    <string name="nom_equipe">Nom de l\'equipe:</string>
    <string name="add_ligue">Ajouter une ligue</string>Fmus
    <string name="add_equipe">Ajouter une equipe</string>
    <string name="add_stade" />
    <string name="add_Stade">Ajouter un  stade</string>
    <string name="update">Update</string>
    <string name="Update_Profile">Update_Profile</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZGVyYmVsOTkiLCJhIjoiY2wyanEyNG1hMDFoNDNpcWNnaTZ0d3M5MCJ9.zQzv_Gv1q1BUjxW2vtDbsg</string>
    <string name="ajouter">"Ajouter "</string>
    <string name="ajouter_une_equipe">Ajouter une equipe</string>
    <string name="voir_les_stade">Voir les stades</string>
    <string name="Localisation">Localisation</string>
    <string name="ajouter_une_ligue_a_ce_stade">Ajouter une ligue a ce stade</string>
    <string name="numero">Numero</string>
    <string name="numtelephonique">Numero  telephone</string>
    <string name="voirequipeofligue">Voir les equipes de ce ligue</string>
    <string name="Add_equipe_to_ligue">Add equipe to ligue</string>
    <string name="voir_ligue">Voir les ligues</string>
    <string name="vour_liste_joueur">Voir la liste des joueur</string>
    <string name="ajouterVotreJoueur">Ajouter votre joueur</string>
    <string name="longueur">Longueur</string>
    <string name="taille">Taille</string>
    <string name="addJoueur">Ajouter un joueur</string>


</resources>