<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragement.profileUserFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImageUser"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="107dp"


        android:src="@drawable/ic_baseline_person_24"
        app:civ_border_color="#FF4500"
        app:civ_border_width="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/nom_profile"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImageUser" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/prenom_profile"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/email_Profile"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/profileNomUser"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/nom"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/profileImageUser" />

    <TextView
        android:id="@+id/profilePrenomuser"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/prenom"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/profileNomUser" />

    <TextView
        android:id="@+id/profileEmailUser"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/profilePrenomuser" />
</androidx.constraintlayout.widget.ConstraintLayout>