<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragement.UserEquipeDetailsFragment">

    <de.hdodenhof.circleimageview.CircleImageView
    android:id="@+id/imagedetailsEquipe52"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:layout_marginStart="105dp"

    android:layout_marginTop="20dp"
    android:layout_marginEnd="106dp"
    android:src="@drawable/ligue"
    app:civ_border_color="@color/dgreen_2"
    app:civ_border_width="5dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <TextView
    android:id="@+id/nomDetailsEquipe52"
    android:layout_width="300dp"
    android:layout_height="60dp"
    android:layout_marginStart="55dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="56dp"
    android:text="@string/ligueName"
    android:textAlignment="center"
    android:textColor="@color/yellow_222"
    android:textSize="34sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imagedetailsEquipe52" />

    <TextView
    android:id="@+id/textView952"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="17dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="292dp"
    android:text="@string/description"
    android:textColor="@color/color_333"
    android:textSize="20sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/nomDetailsEquipe52" />

    <TextView
        android:id="@+id/descriptionDetailsEquipe52"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="43dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView952" />

    <Button
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:text="@string/vour_liste_joueur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionDetailsEquipe52" />

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:text="@string/ajouterVotreJoueur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />
</androidx.constraintlayout.widget.ConstraintLayout>